--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>free.fgq</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>springboot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>demo</name>
+	<name>springboot</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
