--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,22 @@
-server.port=8888
+#server.port=8888
+
 
 ## config dy protity
-free.fgq.name= handsome
-free.fgq.age= 18
+#free.fgq.name= handsome
+#free.fgq.age= 18
 
 ## log  
-logging.path=/user/local/log
-logging.level.com.favorites=DEBUG
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate=ERROR
+#logging.path=/user/local/log
+#logging.level.com.favorites=DEBUG
+#logging.level.org.springframework.web=INFO
+#logging.level.org.hibernate=ERROR
 
 ## DataBase
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/test
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #spring.jpa.properties.hibernate.hbm2ddl.auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql= true
+#spring.jpa.show-sql= true
