--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,15 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+
+		<spring-data-jpa.version>1.11.4.RELEASE</spring-data-jpa.version>
+		<spring-data-train.version>Ingalls-SR4</spring-data-train.version>
+		<mysql-connector.version>6.0.6</mysql-connector.version>
+		<sonar.host.url>http://192.168.1.9:9000/</sonar.host.url>
+		<json.version>2.4</json.version>
+		<logback.version>1.2.3</logback.version>
+		<spring-boot.version>1.5.4.RELEASE</spring-boot.version>
+		<lombok-version>1.16.8</lombok-version>
 	</properties>
 
 	<dependencies>
@@ -61,6 +70,39 @@
 	        <groupId>mysql</groupId>
 	        <artifactId>mysql-connector-java</artifactId>
   		 </dependency>
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.47</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>5.0.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok-version}</version>
+			<scope>provided</scope>
+		</dependency>
   		 
 	</dependencies>
 
