--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jackson.date-format=yyyy-MM-dd
 spring.jackson.time-zone = GMT+8
-mybatis.config-location=classpath:mybatis/config/config.xml
+#mybatis.config-location=classpath:mybatis/config/config.xml
 spring.application.name=springboot-demo
 ## Mybatis \uFFFD\uFFFD\uFFFD\uFFFD
 mybatis.mapper-locations = classpath:mapper/*.xml
