--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 		<spring-data-jpa.version>1.11.4.RELEASE</spring-data-jpa.version>
 		<spring-data-train.version>Ingalls-SR4</spring-data-train.version>
 		<mysql-connector.version>6.0.6</mysql-connector.version>
-		<sonar.host.url>http://192.168.1.9:9000/</sonar.host.url>
+		<!--<sonar.host.url>http://192.168.1.9:9000/</sonar.host.url>-->
 		<json.version>2.4</json.version>
 		<logback.version>1.2.3</logback.version>
 		<spring-boot.version>1.5.4.RELEASE</spring-boot.version>
@@ -62,10 +62,10 @@
 		 </dependency>
 		 
 		<!-- SpingBoot jpa -->
-		 <dependency>
+		 <!--<dependency>
 	       	 <groupId>org.springframework.boot</groupId>
 	       	 <artifactId>spring-boot-starter-data-jpa</artifactId>
-    	 </dependency>
+    	 </dependency>-->
     	 <dependency>
 	        <groupId>mysql</groupId>
 	        <artifactId>mysql-connector-java</artifactId>
@@ -103,7 +103,14 @@
 			<version>${lombok-version}</version>
 			<scope>provided</scope>
 		</dependency>
-  		 
+
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
