--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,9 +17,9 @@ security:
 spring:
   profiles: dev
   datasource:
-      url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
+      url: jdbc:mysql://192.168.2.88:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
       username: root
-      password: 123456
+      password: root
       driverclassName: com.mysql.cj.jdbc.Driver
       testOnBorrow: true
       validationQuery: select 1
